# kalandra

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/: actionlint.yml  dependabot.yml
.github/workflows/: publish.yml  verify.yml
src/git_sync/: __main__.py  gitprotocol.py
src/git_sync/commands/: update_mirror.py
src/git_sync/transports/: __init__.py  base.py  file.py  ssh.py
src/kalandra/: __main__.py  cli.py  github_config_utils.py  github_utils.py  gitprotocol.py  stream_utils.py
src/kalandra/auth/: __init__.py  basic.py  github.py
src/kalandra/commands/: update_mirror.py
src/kalandra/transports/: __init__.py  base.py  credentials.py  file.py  http.py  ssh.py
tests/: test_auth_basic.py  test_auth_github.py  test_github_config_utils.py  test_gitprotocol.py  test_transport_http.py  test_update_mirror.py
tests/e2e/: test_docker_image_runs.py  test_git_http_backend.py  test_github_sync.py  test_image_entrypoint.sh
