[tool.poetry]
name = "kalandra"
version = "0.4.0"
description = ""
authors = ["Lukasz Rekucki <lrekucki@gmail.com>"]
readme = "README.md"
packages = [{ include = "kalandra", from = "src/" }]
license = "Apache-2.0"

[tool.poetry.scripts]
kalandra = 'kalandra.__main__:run'

[tool.poetry.dependencies]
python = "^3.12"
asyncssh = "^2.17.0"
aiofiles = "^24.1.0"
aiohttp = "^3.11.12"

pygithub = { version = "^2.6.1", optional = true }

[tool.poetry.extras]
github = ["pygithub"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0"
pytest-asyncio = "^0.25.3"

[tool.pytest]
[tool.pytest.ini_options]
addopts = '--import-mode=importlib --cov --cov-report=lcov'
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(levelname)8s %(message)s"
markers = ["http_interactions: mark test as requiring HTTP interactions"]
testpaths = ['tests']

asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.lcov]
output = 'build/coverage.lcov'

[tool.coverage.report]
format = 'markdown'

[tool.coverage.run]
branch = true
data_file = 'build/coverage.data'
source = ['kalandra']

[tool.coverage.xml]
output = 'build/coverage.xml'

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
extend-select = ['I', 'TID']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
