[project]
name = "kalandra"
version = "0.9.1"
description = ""
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Lukasz Rekucki", email = "lrekucki@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0,<26.0.0",
    "aiohttp>=3.13.3,<4.0.0",
    "asyncssh>=2.22.0,<3.0.0",
]

[project.optional-dependencies]
github = ["pygithub>=2.8.1,<3.0.0"]

[project.scripts]
kalandra = "kalandra.__main__:run"

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-asyncio>=1.3.0", "pytest-cov>=7.0"]

[tool.uv]

[tool.uv.sources]
kalandra = { path = "src" }

[tool.pytest]
[tool.pytest.ini_options]
addopts = '--import-mode=importlib --cov --cov-report=lcov'
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(levelname)8s %(message)s"
markers = ["http_interactions: mark test as requiring HTTP interactions"]
testpaths = ['tests']

asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.lcov]
output = 'build/coverage.lcov'

[tool.coverage.report]
format = 'markdown'

[tool.coverage.run]
branch = true
data_file = 'build/coverage.data'
source = ['kalandra']

[tool.coverage.xml]
output = 'build/coverage.xml'

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
extend-select = ['I', 'TID']

[build-system]
requires = ["uv_build >= 0.9.21, <0.10.0"]
build-backend = "uv_build"
